Fix matrix print output, make comments prettier

--- a/tasks/Download Expression Matrix for Scanpy/Download SmartSeq2 Expression Matrix as Input to Scanpy.ipynb
+++ b/tasks/Download Expression Matrix for Scanpy/Download SmartSeq2 Expression Matrix as Input to Scanpy.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 93,
    "metadata": {
     "scrolled": true
    },
@@ -47,8 +47,8 @@
     "        \"must\": [\n",
     "          {\n",
     "            \"match\": {\n",
-    "              \"files.file_json.files.content.file_core.file_format\": \"results\" # It needs to have a .results file...\n",
-    "            }\n",
+    "              \"files.file_json.files.content.file_core.file_format\": \"results\" # It needs to have a\n",
+    "            }                                                                  # results file...\n",
     "          },\n",
     "          {\n",
     "            \"range\": {\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,14 +744,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0   \n",
+      "AnnData object with n_obs × n_vars = 58347 × 1 \n",
       "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
       "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
       "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
@@ -795,14 +795,15 @@
       "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
       "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
       "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
-      "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   309.7 0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+      "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   309.7 0.0   0.0   0.0   0.0   0.0   0.0   \n",
       "...\n"
      ]
     }
    ],
    "source": [
-    "for i in range(749):\n",
-    "    print( '{:<6}'.format('{:.1f}'.format(adata.X[i])), end='' if i % 17 != 0 else '\\n' )\n",
+    "print(adata)\n",
+    "for i in range(0, 748):\n",
+    "    print( '{:<6}'.format('{:.1f}'.format(adata.X[i])), end='' if (i + 1) % 17 != 0 else '\\n' )\n",
     "print('...')"
    ]
   },
@@ -815,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
