Add note to notebook
Include a note regarding changing config file to integration

--- a/tasks/Download Expression Matrix for Scanpy/Download SmartSeq2 Expression Matrix as Input to Scanpy.ipynb
+++ b/tasks/Download Expression Matrix for Scanpy/Download SmartSeq2 Expression Matrix as Input to Scanpy.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use this query in the `post_search()` method to find a recent analysis bundle containing a `.results` file. However, __we won't find any analysis bundles under _production,___ where we're currently looking. We need to look under _integration_ instead. To do this, we can follow a few short steps:\n",
+    "We can use this query in the `post_search()` method to find a recent analysis bundle containing a `.results` file. __However, before HCA's official release, we won't find any analysis bundles under _production,___ where we're currently looking. We need to look under _integration_ instead. To do this, we can follow a few short steps:\n",
     "\n",
     "> 1) Go to ```~/.config/hca/``` on your local machine and edit the `config.json` file there.\n",
     "\n",
