--- a/tasks/Download Expression Matrix for Scanpy/Download SmartSeq2 Expression Matrix as Input to Scanpy.ipynb
+++ b/tasks/Download Expression Matrix for Scanpy/Download SmartSeq2 Expression Matrix as Input to Scanpy.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 140,
    "metadata": {
     "scrolled": true
    },
@@ -43,46 +43,59 @@
    "source": [
     "query = {\n",
     "    \"query\": {\n",
-    "      \"bool\": {\n",
-    "        \"must\": [\n",
-    "          {\n",
-    "            \"match\": {\n",
-    "              \"files.file_json.files.content.file_core.file_format\": \"results\" # It needs to have a\n",
-    "            }                                                                  # results file...\n",
-    "          },\n",
-    "          {\n",
-    "            \"range\": {\n",
-    "              \"manifest.version\": {\n",
-    "                \"gte\": \"2018-07-12T100000.000000Z\" # ...and preferably not be too old, either.\n",
-    "              }\n",
-    "            }\n",
-    "          }\n",
-    "        ]\n",
-    "      }\n",
+    "        \"bool\": {\n",
+    "            \"must\": [\n",
+    "                {\n",
+    "                    \"match\": {\n",
+    "                        \"files.file_json.files.content.file_core.file_format\": \"results\" # It needs to have a\n",
+    "                    }                                                                    # results file...\n",
+    "                },\n",
+    "                {\n",
+    "                    \"range\": {\n",
+    "                        \"manifest.version\": {\n",
+    "                            \"gte\": \"2018-07-12T100000.000000Z\" # ...and preferably not be too old, either.\n",
+    "                        }\n",
+    "                    }\n",
+    "                }\n",
+    "            ]\n",
+    "        }\n",
     "    }\n",
-    "  }"
+    "}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use this query in the `post_search()` method to find a recent analysis bundle containing a `.results` file. __However, before HCA's official release, we won't find any analysis bundles under _production,___ where we're currently looking. We need to look under _integration_ instead. To do this, we can follow a few short steps:\n",
-    "\n",
-    "> 1) Go to ```~/.config/hca/``` on your local machine and edit the `config.json` file there.\n",
-    "\n",
-    "> 2) Change the path `https://dss.data.humancellatlas.org/v1/swagger.json` to `https://dss.integration.data.humancellatlas.org/v1/swagger.json`.\n",
-    "\n",
-    "> 3) Restart your computer.\n",
-    "\n",
-    "After completing these steps, we can execute our search with no problems. (Note that to save space in this example, I'll only print the portion of the bundle containing the results file.)\n",
-    "\n",
-    "* _Reminder: Don't forget to change this path back to its original value if you want to search through production again!_"
+    "This query looks for bundles that satisfy a *bool*ean condition consisting of two checks, both of which *must* be true. The *match* check looks for the `file_format` field and returns true if its value matches the string 'results'. The second check, *range*, returns true if the bundle's `manifest.version` has a value greater than or equal to 7/12/18. In short, __this query will find bundles that contain a `.results` file and are newer than July 12, 2018.__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NOTE: Prior to HCA's official release, there are no analysis bundles in `production`. Instead, you will need to look under `integration` in order to find one. To do this, set `client.host`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.host = 'https://dss.integration.data.humancellatlas.org/v1'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Okay, now let's execute the search. Since the `files` section of the bundle is pretty long, I'll only print the portion containing a results file (in this case, the 28th file in the bundle). If you want, you can always print the entire bundle to get a better picture of where the file is located."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +104,7 @@
      "text": [
       "{\n",
       "    \"content\": {\n",
-      "        \"describedBy\": \"https://schema.humancellatlas.org/type/file/5.2.1/analysis_file\",\n",
+      "        \"describedBy\": \"http://schema.integration.data.humancellatlas.org/type/file/5.2.1/analysis_file\",\n",
       "        \"file_core\": {\n",
       "            \"file_format\": \"results\",\n",
       "            \"file_name\": \"4ee53206-80cd-4144-8c75-b62399a7ae99_rsem.genes.results\"\n",
@@ -99,8 +112,8 @@
       "        \"schema_type\": \"file\"\n",
       "    },\n",
       "    \"hca_ingest\": {\n",
-      "        \"document_id\": \"330f62be-05a5-4c64-9b49-d884c3babeb6\",\n",
-      "        \"submissionDate\": \"2018-07-17T15:58:47.738Z\"\n",
+      "        \"document_id\": \"153552fc-d65f-41af-afa6-3fa85a87d24f\",\n",
+      "        \"submissionDate\": \"2018-07-25T21:39:23.972Z\"\n",
       "    }\n",
       "}\n"
      ]
@@ -109,31 +122,38 @@
    "source": [
     "import json\n",
     "\n",
-    "# Print part of a recent analysis bundle with a results file.\n",
+    "# Print part of a recent analysis bundle with a results file\n",
     "\n",
-    "bundle = client.post_search(es_query=query, replica='aws', output_format='raw')\n",
-    "print(json.dumps(bundle['results'][0]['metadata']['files']['file_json']['files'][28], indent=4, sort_keys=True))"
+    "bundles = client.post_search(es_query=query, replica='aws', output_format='raw')\n",
+    "print(json.dumps(bundles['results'][0]['metadata']['files']['file_json']['files'][27], indent=4, sort_keys=True))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Okay! It looks like we've found a file uuid we can use: `330f62be-05a5-4c64-9b49-d884c3babeb6`. Let's save it locally."
+    "Okay! It looks like we've found a file uuid we can use: `153552fc-d65f-41af-afa6-3fa85a87d24f`. Let's save it locally."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 143,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7629174"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Get the results file\n",
-    "\n",
-    "file = client.get_file(replica='aws', uuid='330f62be-05a5-4c64-9b49-d884c3babeb6')\n",
-    "with open('matrix.results', 'w') as outfile:\n",
-    "    outfile.write(file.decode(\"utf-8\"))\n",
-    "    "
+    "results = client.get_file(replica='aws', uuid='153552fc-d65f-41af-afa6-3fa85a87d24f')\n",
+    "open('matrix.results', 'w').write(results.decode(\"utf-8\"))"
    ]
   },
   {
@@ -145,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -156,15 +176,13 @@
       "ENSG00000000003.14\tENST00000373020.8,ENST00000494424.1,ENST00000496771.5,ENST00000612152.4,ENST00000614008.4\t1749.40\t1541.80\t0.00\t0.00\t0.00\t0.00\t0.00\t2.02\t23.44\n",
       "ENSG00000000005.5\tENST00000373031.4,ENST00000485971.1\t940.50\t732.90\t0.00\t0.00\t0.00\t0.00\t0.00\t1.54\t17.88\n",
       "ENSG00000000419.12\tENST00000371582.8,ENST00000371584.8,ENST00000371588.9,ENST00000413082.1,ENST00000466152.5,ENST00000494752.1\t977.83\t770.24\t0.00\t0.00\t0.00\t0.00\t0.00\t3.32\t38.56\n",
-      "\n",
-      "...\n"
+      "ENSG00000000457.13\tENST00000367770.5,ENST00000367771.10,ENST00000367772.8,ENST00000423670.1,ENST00000470238.1\t3197.00\t2989.40\t0.00\t0.00\t0.00\t0.00\t0.00\t0.86\t9.99\n",
+      "ENSG00000000460.16\tENST00000286031.10,ENST00000359326.8,ENST00000413811.3,ENST00000459772.5,ENST00000466580.6,ENST0000047\n"
      ]
     }
    ],
    "source": [
-    "with open('matrix.results', 'r') as m:\n",
-    "    print(m.read()[:591])\n",
-    "    print('...')"
+    "print(open('matrix.results', 'r').read()[:873])"
    ]
   },
   {
@@ -176,31 +194,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "\n",
-    "# Transform the results file into a mtx file\n",
+    "# Take the data we want out of the results file and store it into a tsv file\n",
     "\n",
-    "with open('matrix.results', newline='') as infile, open('matrix.mtx', 'w') as outfile:\n",
+    "with open('matrix.results', 'r') as infile, open('matrix.tsv', 'w', newline='') as outfile:\n",
     "    reader = csv.DictReader(infile, delimiter='\\t')\n",
-    "    writer = csv.DictWriter(outfile, delimiter='\\t', fieldnames=['gene_id', 'TPM'])\n",
+    "    writer = csv.DictWriter(outfile, fieldnames=['gene_id', 'TPM'], delimiter='\\t')\n",
     "    for row in reader:\n",
-    "        writer.writerow({'gene_id': row['gene_id'], 'TPM': row['TPM']})\n"
+    "        writer.writerow({'gene_id': row['gene_id'], 'TPM': row['TPM']})"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our new file, `matrix.mtx`, looks something like this:"
+    "Our new file, `matrix.tsv`, looks something like this:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -208,58 +226,56 @@
      "output_type": "stream",
      "text": [
       "ENSG00000000003.14\t0.00\n",
-      "\n",
       "ENSG00000000005.5\t0.00\n",
-      "\n",
       "ENSG00000000419.12\t0.00\n",
-      "\n",
       "ENSG00000000457.13\t0.00\n",
-      "\n",
-      "...\n"
+      "ENSG00000000460.16\t0.00\n",
+      "ENSG00000000938.12\t0.00\n",
+      "ENSG00000000971.15\t0.00\n",
+      "ENSG00000001036.13\t0.00\n",
+      "ENSG00000001084.10\t0.00\n"
      ]
     }
    ],
    "source": [
-    "with open('matrix.mtx', 'r') as m:\n",
-    "    print(m.read()[:98])\n",
-    "    print('...')"
+    "print(open('matrix.tsv', 'r').read()[:214])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have a file containing exactly what we want, we can read it into scanpy."
+    "Now that we have a file containing what we want, we can transpose it and read it into scanpy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scanpy.api as sc\n",
     "\n",
-    "adata = sc.read_csv( filename='matrix.mtx', delimiter='\\t' )"
+    "adata = sc.read_csv(filename='matrix.tsv', delimiter='\\t').transpose()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But how do we know that everything worked? Let's see what our AnnData object looks like."
+    "But how do we know that everything worked? Let's print our AnnData object (truncating the output again)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AnnData object with n_obs × n_vars = 58347 × 1 \n",
+      "AnnData object with n_obs × n_vars = 1 × 58347 \n",
       "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
       "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
       "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
@@ -268,15 +284,14 @@
       "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
       "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
       "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
-      "...\n"
+      "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n"
      ]
     }
    ],
    "source": [
     "print(adata)\n",
-    "for i in range(0, 136):\n",
-    "    print( '{:<6}'.format('{:.1f}'.format(adata.X[i])), end='' if (i + 1) % 17 != 0 else '\\n' )\n",
-    "print('...')"
+    "for i in range(0, 153):\n",
+    "    print('{:<6}'.format('{:.1f}'.format(adata.X[i])), end='' if (i + 1) % 17 != 0 else '\\n' )"
    ]
   },
   {
@@ -288,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +324,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that you've set up your matrix in scanpy, you're free to perform whatever analysis piques your interest."
+    "Okay, so we have one AnnData object we can use with scanpy. __But what if we want a second one?__ Let's go through the steps again, this time with a different `.results` file. We can use the same query to get a bunch of analysis bundles, but this time get our `.results` file from the _second_ bundle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"content\": {\n",
+      "        \"describedBy\": \"https://schema.humancellatlas.org/type/file/5.2.1/analysis_file\",\n",
+      "        \"file_core\": {\n",
+      "            \"file_format\": \"results\",\n",
+      "            \"file_name\": \"84b516d0-30e9-4693-9658-a63aecb48040_rsem.genes.results\"\n",
+      "        },\n",
+      "        \"schema_type\": \"file\"\n",
+      "    },\n",
+      "    \"hca_ingest\": {\n",
+      "        \"document_id\": \"9ae45bb8-7130-4e06-a5af-87b587155034\",\n",
+      "        \"submissionDate\": \"2018-07-25T21:10:58.516Z\"\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "bundles = client.post_search(es_query=query, replica='aws', output_format='raw')\n",
+    "print(json.dumps(bundles['results'][1]['metadata']['files']['file_json']['files'][27], indent=4, sort_keys=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the new uuid, we can get the `.results` file itself."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7629176"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results2 = client.get_file(replica='aws', uuid='9ae45bb8-7130-4e06-a5af-87b587155034')\n",
+    "open('matrix2.results', 'w').write(results2.decode(\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, let's take the data we want out of the results file and store it into a tsv file..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('matrix2.results', 'r') as infile, open('matrix2.tsv', 'w', newline='') as outfile:\n",
+    "    reader = csv.DictReader(infile, delimiter='\\t')\n",
+    "    writer = csv.DictWriter(outfile, fieldnames=['gene_id', 'TPM'], delimiter='\\t')\n",
+    "    for row in reader:\n",
+    "        writer.writerow({'gene_id': row['gene_id'], 'TPM': row['TPM']})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "...and then create another AnnData object & print it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AnnData object with n_obs × n_vars = 1 × 58347 \n",
+      "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+      "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+      "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+      "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+      "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+      "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+      "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+      "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+      "0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   0.0   \n"
+     ]
+    }
+   ],
+   "source": [
+    "adata2 = sc.read_csv( filename='matrix.tsv', delimiter='\\t' ).transpose()\n",
+    "\n",
+    "print(adata2)\n",
+    "for i in range(0, 153):\n",
+    "    print( '{:<6}'.format('{:.1f}'.format(adata2.X[i])), end='' if (i + 1) % 17 != 0 else '\\n' )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that you've set up your two matrices in scanpy, you're ready to perform whatever analysis piques your interest."
    ]
   }
  ],
