Fix notebook formatting for GitHub's HTML version

--- a/tasks/Download Expression Matrix for Scanpy/Download SmartSeq2 Expression Matrix as Input to Scanpy.ipynb
+++ b/tasks/Download Expression Matrix for Scanpy/Download SmartSeq2 Expression Matrix as Input to Scanpy.ipynb
@@ -46,8 +46,8 @@
     "        \"bool\": {\n",
     "            \"must\": [\n",
     "                {\n",
-    "                    \"match\": {\n",
-    "                        \"files.file_json.files.content.file_core.file_format\": \"results\" # It needs to have a\n",
+    "                    \"match\": {                                                           # It needs to\n",
+    "                        \"files.file_json.files.content.file_core.file_format\": \"results\" # have a\n",
     "                    }                                                                    # results file...\n",
     "                },\n",
     "                {\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -177,12 +177,12 @@
       "ENSG00000000005.5\tENST00000373031.4,ENST00000485971.1\t940.50\t732.90\t0.00\t0.00\t0.00\t0.00\t0.00\t1.54\t17.88\n",
       "ENSG00000000419.12\tENST00000371582.8,ENST00000371584.8,ENST00000371588.9,ENST00000413082.1,ENST00000466152.5,ENST00000494752.1\t977.83\t770.24\t0.00\t0.00\t0.00\t0.00\t0.00\t3.32\t38.56\n",
       "ENSG00000000457.13\tENST00000367770.5,ENST00000367771.10,ENST00000367772.8,ENST00000423670.1,ENST00000470238.1\t3197.00\t2989.40\t0.00\t0.00\t0.00\t0.00\t0.00\t0.86\t9.99\n",
-      "ENSG00000000460.16\tENST00000286031.10,ENST00000359326.8,ENST00000413811.3,ENST00000459772.5,ENST00000466580.6,ENST0000047\n"
+      "ENSG00000000460.16\tENST00000286031.10,ENST00000359326.8,ENST00000413811.3,ENST00000459772.5,ENST0000\n"
      ]
     }
    ],
    "source": [
-    "print(open('matrix.results', 'r').read()[:873])"
+    "print(open('matrix.results', 'r').read()[:852])"
    ]
   },
   {
