update gene list file name

--- a/nov2018_demo/hca_demo_scanpy.ipynb
+++ b/nov2018_demo/hca_demo_scanpy.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_names = pd.read_csv('ENSG_to_name.txt', index_col = 0)\n",
+    "gene_names = pd.read_csv('ENSG_to_name.csv', index_col = 0)\n",
     "named_list = adata.var.join(gene_names)"
    ]
   },
