update file names

--- a/nov2018_demo/hca_demo_scanpy.ipynb
+++ b/nov2018_demo/hca_demo_scanpy.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "## Query for genes of interest\n",
     "\n",
-    "HCA uses Gencode nomenclature as gene identifiers. A list of these identifiers and their corresponding gene symbols is included in this repository as `./ENSG_to_name.txt`\n",
+    "HCA uses Gencode nomenclature as gene identifiers. A list of these identifiers and their corresponding gene symbols is included in this repository as `./ENSG_to_name.csv`\n",
     "\n",
     "Here we show a quick way to query for the ENSG IDs of your genes of interest."
    ]
