Change name of vignette

--- a/tasks/Sum of All Brain Cells/Sum of All Brain Cells.ipynb
+++ b/tasks/Sum of All Brain Cells/Sum of All Brain Cells.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Find the Number of Cells of a Specific Type\n",
+    "# Sum of All Brain Cells\n",
     "\n",
     "I need to find how many cells of a certain organ type are available in the HCA database. How can I go about doing this?\n",
     "\n",
